[package]
name = "ledger-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# gRPC server/client
tonic = "0.11"
prost = "0.12"

# etcd client (with TLS support)
etcd-client = { version = "0.13", features = ["tls"] }

# Cryptography
sha2 = "0.10"
hex = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID for event IDs
uuid = { version = "1.6", features = ["v4", "serde"] }

[build-dependencies]
tonic-build = "0.11"

[[bin]]
name = "ledger-service"
path = "src/main.rs"